# chess_backend

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  build.sh  code_propositions.md  current_error.md  readme.md  run  run.sh
inc/: bishop.h  board.h  chess.h  classes.h  factory.h  king.h  knight.h  move.h  pawn.h  pgn.h  piece.h  queen.h  rook.h
propositions/: code2.md  code_propositions.md
src/: bishop.cpp  board.cpp  chess.cpp  factory.cpp  king.cpp  knight.cpp  main.cpp  move.cpp  pawn.cpp  pgn.cpp  piece.cpp  queen.cpp  rook.cpp
